--- a/src/components/CareerMobile/CareerMobile.css
+++ b/src/components/CareerMobile/CareerMobile.css
@@ -69,7 +69,7 @@
     cursor: pointer;
 }
 
-@media screen and (min-width: 800px) and (max-width: 1023px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
     .mobile-career-head {
         margin-left: 20px;
         /* align-items: center; */
@@ -87,7 +87,7 @@
 
 }
 
-@media screen and (max-width: 799px) {
+@media screen and (max-width: 768px) {
 
     .career-boxes {
         display: flex;
