--- a/src/components/MobileSkills/MobileSkills.css
+++ b/src/components/MobileSkills/MobileSkills.css
@@ -96,7 +96,7 @@
     cursor: pointer;
 }
 
-@media screen and (min-width: 800px) and (max-width: 1023px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
     .mobile-skills-icon{
     height: 50px;
     width:70px;
