--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -161,7 +161,7 @@
 .cross:hover {
     font-size: larger;
 }
-@media(max-width:799px) {
+@media(max-width:768px) {
         .nav-links {
             display: none;
         }
@@ -183,7 +183,7 @@
         }
 }
 
-@media screen and (min-width: 800px) and (max-width: 1023px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
     
     .nav-links{
         display:none;
